// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selector should be vertical and match snapshot 1`] = `
<Selectorstyles__Wrapper
  vertical={true}
>
  <Selectorstyles__Element
    key="en"
    onClick={[Function]}
    to="/augsburg/en/"
  >
    English
  </Selectorstyles__Element>
  <Selectorstyles__Element
    key="de"
    onClick={[Function]}
  >
    Deutsch
  </Selectorstyles__Element>
</Selectorstyles__Wrapper>
`;

exports[`Selector should match snapshot 1`] = `
<Selectorstyles__Wrapper
  vertical={false}
>
  <Selectorstyles__Element
    key="en"
    onClick={[Function]}
    to="/augsburg/en/"
  >
    English
  </Selectorstyles__Element>
  <Selectorstyles__Element
    key="de"
    onClick={[Function]}
  >
    Deutsch
  </Selectorstyles__Element>
</Selectorstyles__Wrapper>
`;
